# tech_info_push_test

./: .gitignore  Delect.bat  HP_DT.py  HP_DT_text.py  HP_NB.py  HP_NB_text.py  HP_docking.py  HP_docking_text.py  Lenovo_DT.py  Lenovo_DT_text.py  Lenovo_NB.py  Lenovo_NB_text.py  Lenovo_docking.py  Lenovo_docking_text.py  Run.bat  dell_DT.py  dell_DT_text.py  dell_NB.py  dell_NB_text.py  dell_dock.py  dell_dock_text.py  hp-cookie_postman.json  hp_cookie.json  proxyscrape_premium_http_proxies.txt  pyproject.toml  reorganize_data.py  requirements.txt  util.py  web_crawler.py  web_crawler_text.py  測試_使用說明.txt
